Test with a MySQL database?

--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -6,6 +6,18 @@ on:
 jobs:
   API:
     runs-on: 'ubuntu-latest'
+
+
+    services:
+      mysql:
+        image: mysql:5.7
+        env:
+          MYSQL_ALLOW_EMPTY_PASSWORD: yes
+          MYSQL_DATABASE: test
+        ports:
+          - 3306
+        options: --health-cmd="mysqladmin ping" --health-interval=10s --health-timeout=5s --health-retries=3
+
     steps:
     
     - name: Checkout
@@ -25,7 +37,11 @@ jobs:
 
     - name: Execute tests (Unit and Feature tests) via PHPUnit
       run: |
+        php artisan migrate:refresh --seed
         ./vendor/bin/phpunit
+      env:
+        DB_DATABASE: test
+        DB_USERNAME: root
     
     - name: Remove dev dependencies
       run: |
