--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -7,13 +7,13 @@ jobs:
   API:
     runs-on: 'ubuntu-latest'
 
-
     services:
       mysql:
         image: mysql:5.7
         env:
           MYSQL_ALLOW_EMPTY_PASSWORD: yes
           MYSQL_DATABASE: test
+          MYSQL_ROOT_PASSWORD: root
         ports:
           - 3306
         options: --health-cmd="mysqladmin ping" --health-interval=10s --health-timeout=5s --health-retries=3
@@ -43,6 +43,7 @@ jobs:
         APP_ENV: testing
         DB_DATABASE: test
         DB_USERNAME: root
+        DB_PASSWORD: root
     
     - name: Remove dev dependencies
       run: |
