Damn environment variables

--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -13,7 +13,7 @@ jobs:
         env:
           MYSQL_ALLOW_EMPTY_PASSWORD: yes
           MYSQL_DATABASE: test
-          MYSQL_ROOT_PASSWORD: root
+          MYSQL_ROOT_PASSWORD: password
         ports:
           - 3306
         options: --health-cmd="mysqladmin ping" --health-interval=10s --health-timeout=5s --health-retries=3
@@ -41,9 +41,11 @@ jobs:
         ./vendor/bin/phpunit
       env:
         APP_ENV: testing
+        DB_HOST: 127.0.0.1
+        DB_PORT: 3306
         DB_DATABASE: test
         DB_USERNAME: root
-        DB_PASSWORD: root
+        DB_PASSWORD: password
     
     - name: Remove dev dependencies
       run: |
