--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -41,11 +41,12 @@ jobs:
         ./vendor/bin/phpunit
       env:
         APP_ENV: testing
-        DB_HOST: 127.0.0.1
+        DB_HOST: mysql
         DB_PORT: 3306
         DB_DATABASE: test
         DB_USERNAME: root
         DB_PASSWORD: password
+        DB_ROOT_PASSWORD: password
     
     - name: Remove dev dependencies
       run: |
