--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -15,7 +15,7 @@ jobs:
           MYSQL_DATABASE: test
           MYSQL_ROOT_PASSWORD: password
         ports:
-          - 3306
+          - 13306
         options: --health-cmd="mysqladmin ping" --health-interval=10s --health-timeout=5s --health-retries=3
 
     steps:
@@ -41,8 +41,8 @@ jobs:
         ./vendor/bin/phpunit
       env:
         APP_ENV: testing
-        DB_HOST: mysql
-        DB_PORT: 3306
+        DB_HOST: 127.0.0.1
+        DB_PORT: 13306
         DB_DATABASE: test
         DB_USERNAME: root
         DB_PASSWORD: password
