--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -15,6 +15,7 @@ jobs:
           MYSQL_DATABASE: test
           MYSQL_ROOT_PASSWORD: password
         ports:
+          - 3306
           - 13306
         options: --health-cmd="mysqladmin ping" --health-interval=10s --health-timeout=5s --health-retries=3
 
@@ -42,7 +43,7 @@ jobs:
       env:
         APP_ENV: testing
         DB_HOST: 127.0.0.1
-        DB_PORT: 13306
+        DB_PORT: ${{ job.services.mysql.ports['3306'] }}
         DB_DATABASE: test
         DB_USERNAME: root
         DB_PASSWORD: password
