--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -13,7 +13,7 @@ jobs:
         env:
           MYSQL_ALLOW_EMPTY_PASSWORD: yes
           MYSQL_DATABASE: test
-          MYSQL_ROOT_PASSWORD: password
+          MYSQL_ROOT_PASSWORD: root
         ports:
           - 3306
           - 13306
@@ -46,8 +46,8 @@ jobs:
         DB_PORT: ${{ job.services.mysql.ports['3306'] }}
         DB_DATABASE: test
         DB_USERNAME: root
-        DB_PASSWORD: password
-        DB_ROOT_PASSWORD: password
+        DB_PASSWORD: root
+        DB_ROOT_PASSWORD: root
     
     - name: Remove dev dependencies
       run: |
