--- a/public/mix-manifest.json
+++ b/public/mix-manifest.json
@@ -1,4 +1,5 @@
 {
     "/js/app.js": "/js/app.js?id=17853a673a0dbf3e549d",
-    "/css/app.css": "/css/app.css?id=38a2cbce669901bb52a8"
+    "/css/app.css": "/css/app.css?id=38a2cbce669901bb52a8",
+    "/css/new.css": "/css/new.css?id=7dd08907d8b4ff6d1b05"
 }
