--- a/composer.json
+++ b/composer.json
@@ -16,8 +16,7 @@
         "guzzlehttp/guzzle": "^6.3",
         "laravel/framework": "^7.0",
         "laravel/tinker": "^2.0",
-        "ramsey/uuid": "^3.9",
-        "facade/ignition": "^2.0"
+        "ramsey/uuid": "^3.9"
     },
     "require-dev": {
         "fzaninotto/faker": "^1.9.1",
