--- a/composer.json
+++ b/composer.json
@@ -19,6 +19,7 @@
         "ramsey/uuid": "^3.9"
     },
     "require-dev": {
+        "facade/ignition": "^2.0",
         "fzaninotto/faker": "^1.9.1",
         "mockery/mockery": "^1.3.1",
         "nunomaduro/collision": "^4.1",
