--- a/public/mix-manifest.json
+++ b/public/mix-manifest.json
@@ -1,5 +1,4 @@
 {
-    "/js/app.js": "/js/app.js?id=17853a673a0dbf3e549d",
-    "/css/app.css": "/css/app.css?id=38a2cbce669901bb52a8",
-    "/css/new.css": "/css/new.css?id=7dd08907d8b4ff6d1b05"
+    "/js/app.js": "/js/app.js?id=3757a0c4d4daca91e581",
+    "/css/app.css": "/css/app.css?id=a78e2afe34db8793eca7"
 }
