Prevent duplicate URLs

--- a/composer.json
+++ b/composer.json
@@ -13,6 +13,7 @@
         "broadway/broadway": "^2.3",
         "fideloper/proxy": "^4.2",
         "fruitcake/laravel-cors": "^1.0",
+        "glenscott/url-normalizer": "^1.4",
         "guzzlehttp/guzzle": "^6.3",
         "laravel/framework": "^7.0",
         "laravel/tinker": "^2.0",
