--- a/composer.json
+++ b/composer.json
@@ -9,6 +9,7 @@
     "license": "MIT",
     "require": {
         "php": "^7.2.5",
+        "aws/aws-sdk-php": "^3.134",
         "bref/bref": "^0.5.16",
         "broadway/broadway": "^2.3",
         "fideloper/proxy": "^4.2",
